[gd_scene load_steps=12 format=3 uid="uid://dm7tl1wq8tl45"]

[ext_resource type="Script" path="res://interface/pause_menu.gd" id="1_j1th8"]
[ext_resource type="Theme" uid="uid://ckpsaqo81fdqi" path="res://interface/default.theme" id="2_h0pij"]
[ext_resource type="Texture2D" uid="uid://870ja6oajj48" path="res://interface/icon-music.png" id="3_5ofxt"]
[ext_resource type="PackedScene" uid="uid://babe2f4kirx5i" path="res://interface/volume_slider.tscn" id="3_cq08p"]
[ext_resource type="Texture2D" uid="uid://cm5d8q0e5fi5s" path="res://interface/focus_arrow.png" id="3_jyyip"]
[ext_resource type="AudioStream" uid="uid://du4d6lgjh5rny" path="res://interface/music_sample.wav" id="4_8dsf2"]
[ext_resource type="Script" path="res://interface/focus_arrow.gd" id="4_pragx"]
[ext_resource type="Texture2D" uid="uid://bap6b5ninoniy" path="res://interface/icon-sound.png" id="4_r7guv"]
[ext_resource type="AudioStream" uid="uid://dqoeb7ik8tedx" path="res://characters/player/hurt.wav" id="5_udb7d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwq45"]

[sub_resource type="LabelSettings" id="LabelSettings_23ijc"]
font_color = Color(0.972549, 0.721569, 0, 1)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_j1th8")

[node name="Menu" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_h0pij")
theme_override_styles/panel = SubResource("StyleBoxEmpty_bwq45")

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="Menu/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1
vertical = true

[node name="PausedLabel" type="Label" parent="Menu/PanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "- Paused -"
label_settings = SubResource("LabelSettings_23ijc")
horizontal_alignment = 1

[node name="Blink" type="Timer" parent="Menu/PanelContainer/BoxContainer/PausedLabel"]
unique_name_in_owner = true
wait_time = 0.7

[node name="MarginContainer" type="MarginContainer" parent="Menu/PanelContainer/BoxContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="Menu/PanelContainer/BoxContainer"]
layout_mode = 2
alignment = 1

[node name="VolumeSlider" parent="Menu/PanelContainer/BoxContainer/BoxContainer" instance=ExtResource("3_cq08p")]
layout_mode = 2
audio_bus_name = &"Music"
sample = ExtResource("4_8dsf2")

[node name="Icon" type="TextureRect" parent="Menu/PanelContainer/BoxContainer/BoxContainer"]
layout_mode = 2
texture = ExtResource("3_5ofxt")
stretch_mode = 5

[node name="BoxContainer2" type="BoxContainer" parent="Menu/PanelContainer/BoxContainer"]
layout_mode = 2
alignment = 1

[node name="VolumeSlider" parent="Menu/PanelContainer/BoxContainer/BoxContainer2" instance=ExtResource("3_cq08p")]
layout_mode = 2
audio_bus_name = &"Sound"
sample = ExtResource("5_udb7d")

[node name="Icon" type="TextureRect" parent="Menu/PanelContainer/BoxContainer/BoxContainer2"]
layout_mode = 2
texture = ExtResource("4_r7guv")
stretch_mode = 5

[node name="Menu" type="Button" parent="Menu/PanelContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"
flat = true

[node name="Resume" type="Button" parent="Menu/PanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"
flat = true

[node name="Countdown" type="Label" parent="Menu"]
visible = false
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="FocusPointer" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 8)
texture = ExtResource("3_jyyip")
stretch_mode = 5
script = ExtResource("4_pragx")

[connection signal="timeout" from="Menu/PanelContainer/BoxContainer/PausedLabel/Blink" to="." method="_on_blink_timeout"]
[connection signal="pressed" from="Menu/PanelContainer/BoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/BoxContainer/Resume" to="." method="_on_resume_pressed"]
